vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
   name: vaultwarden-svc
   namespace: vaultwarden
   labels:
      app: vaultwarden
spec:
   ports:
      - port: 80
        name: vaultwarden-gui
        targetPort: 80
   selector:
      app: vaultwarden
