vaultwarden/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-ingressroute
  namespace: vaultwarden
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`vaultwarden.home`)
    kind: Rule
    services:
    - name: vaultwarden-svc
      port: 80
  tls:
    secretName: vaultwarden.home
